# probability-sorting

./: .coverage  .pre-commit-config.yaml  README.md  Untitled.ipynb  Untitled1.ipynb  alogrithm.ipynb  esbozossotr.ipynb  my_sort.py  plots.ipynb  pyproject.toml  sort_analyzer.py  sortin.ipynb
.github/workflows/: ci.yaml
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: lovelace.typ  main.typ  refs.bib  template.typ
docs/sections/: 01_intro.typ  02_cont.typ  02_cont_ex.typ  03_discrete.typ  03_discrete_ex.typ
notebooks/: Untitled2.ipynb  algorithm copy.ipynb  algorithm.ipynb  arbitrary.ipynb  dev_discrete_sort.ipynb  new_plots.ipynb  plots.ipynb  sortin.ipynb  symbolic_cont.ipynb  tests.ipynb  types.ipynb
onsort/: cont_prob.py  cont_thresholds.py  discrete_plots.py  discrete_prob.py  logger.py  my_sort.py  online_sort.py  plots.py  sort_analyzer.py  symbolic.py
onsort/discrete/: discrete_prob.cpp
src/: logger.py  my_sort.py  plots.py  sort_analyzer.py
test/: test_discrete_prob.py  test_probability.py  test_sort.py  test_sort_gen.py
